--- a/index.html
+++ b/index.html
@@ -10,46 +10,64 @@
     <script src="https://kit.fontawesome.com/26f32fba18.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="head-wrapper">
+    <div id="home" class="head-wrapper">
         <div class="navbar">
             <h1>Portfo<span>lio</span></h1>
             <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Services</a></li>
-                <li><a href="">Skills</a></li>
-                <li><a href="">Projects</a></li>
+                <a href="#home"><li> Home</li></a>
+                <a href="#skills"><li>Skills</li></a>
+                <a href="#projects"><li>Projects</li></a>
+                <a href="#services"><li>Services</li></a>
+                <a href="#about"><li>About</li></a>
+                <a href="#contact"><li>Contact</li></a>
             </ul>
         </div>
         <div class="description">
             <div class="name">
-                <h1>Omar Mahat</h1>
-                <p class="conte">Software developer</p> <br> <br>
-                <p class="contenty">A highly motivated and passionate full-stack web developer!</p>
+                <div class="my-name">
+                    <h1>Omar Mahat</h1>
+                    <p class="major">Software developer</p>
+                </div>
+                <div class="my-name2">
+                    <p class="assessment">I'm a highly motivated and passionate full-stack web developer and I'm always genuinely interested in bettering myself and my approaches to software development.</p>
+                </div>
+                <a href="#contact"><button class="hire-me">Contact Me</button></a>
+            </div>
+            <div class="profile">
+                <img src="./assets/images/transparent-bg-designify.png" alt="">
             </div>
         </div>
     </div>
 
-    <div class="about">
-        <h1>About me</h1>
-        <h2>who am i</h2>
-        <div class="about-content">
-            <div class="left-about">
-                <img src="./assets/images/myImage.jpg" alt="">
+    <!-- skills -->
+
+    <div id="projects" class="projects">
+        <h1>My projects</h1>
+        <!-- <h2>Explore some of my projects</h2> -->
+        <div class="project-content">
+            <div class="project-images">
+                <a href="https://omari25.github.io/Moringa-Website/"><img src="./assets/images/Screenshot from 2022-06-15 05-54-36.png" alt="">
+                <p>A school landing page</p></a>
             </div>
-            <div class="right-about">
-                <p> I am a highly motivated and passionate full-stack web developer, 
-                    seeking opportunity to help and inspire companies through passion. I have good communication skills with 
-                    the ability to convey ideas clearly with an emphasis on client satisfaction 
-                    and also technically competent and industry aware meaning that each project is
-                    undertaken with the most up-to-date and relevant programming foundation available.
-                </p>
+            <div class="project-images">
+                <a href="https://omari25.github.io/Moringa-School-second-assignment/"><img src="./assets/images/Screenshot from 2022-06-15 05-55-26.png" alt="">
+                <p>Quick movers website</p></a>
+            </div>
+        </div>
+        <div class="project-content">
+            <div class="project-images">
+                <a href="https://omari25.github.io/Javascript-practice-course/"><img src="./assets/images/Screenshot from 2022-06-15 05-55-54.png" alt="">
+                <p>Javscript practice quizzes</p></a>
+            </div>
+            <div class="project-images">
+                <a href="https://omari25.github.io/Javascript-practice-course/"><img src="./assets/images/Screenshot from 2022-06-15 05-55-54.png" alt="">
+                <p>Javscript practice quizzes</p></a>
             </div>
         </div>
     </div>
 
     <center>
-        <div class="services">
+        <div id="services" class="services">
             <h1>My services</h2>
             <h2>what i provide</h2>
             <div class="serv-content">
@@ -72,27 +90,26 @@
         </div>
     </center>
 
-    <div class="projects">
-        <h1>My projects</h1>
-        <h2>Explore some of my projects</h2>
-        <div class="project-content">
-            <div class="project-images">
-                <a href="https://omari25.github.io/Moringa-Website/"><img src="./assets/images/Screenshot from 2022-06-15 05-54-36.png" alt="">
-                <p>A school landing page</p></a>
+    <div id="about" class="about">
+        <h1>About me</h1>
+        <h2>who am i</h2>
+        <div class="about-content">
+            <div class="left-about">
+                <img src="./assets/images/myImage.jpg" alt="">
             </div>
-            <div class="project-images">
-                <a href="https://omari25.github.io/Moringa-School-second-assignment/"><img src="./assets/images/Screenshot from 2022-06-15 05-55-26.png" alt="">
-                <p>Quick movers website</p></a>
-            </div>
-            <div class="project-images">
-                <a href="https://omari25.github.io/Javascript-practice-course/"><img src="./assets/images/Screenshot from 2022-06-15 05-55-54.png" alt="">
-                <p>Javscript practice quizzes</p></a>
+            <div class="right-about">
+                <p> I am a highly motivated and passionate full-stack web developer, 
+                    seeking opportunity to help and inspire companies through passion. I have good communication skills with 
+                    the ability to convey ideas clearly with an emphasis on client satisfaction 
+                    and also technically competent and industry aware meaning that each project is
+                    undertaken with the most up-to-date and relevant programming foundation available.
+                </p>
             </div>
         </div>
     </div>
 
     <footer>
-        <p>Created by <span>Omar</span> | <i class="fa-regular fa-copyright"></i>2022 All Rights Reserved</p>
+        <!-- <p>Created by <span>Omar</span> | <i class="fa-regular fa-copyright"></i>2022 All Rights Reserved</p> -->
     </footer>
     
     <script src="./assets/js/script.js"></script>
