modified all the files and added more features

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <p class="major">Software developer</p>
                 </div>
                 <div class="my-name2">
-                    <p class="assessment">I'm a highly motivated and passionate full-stack web developer and I'm always genuinely interested in bettering myself and my approaches to software development.</p>
+                    <p class="assessment">A highly motivated and passionate full-stack web developer and always genuinely interested in bettering myself and my approaches to software development.</p>
                 </div>
                 <a href="#contact"><button class="hire-me">Contact Me</button></a>
             </div>
@@ -43,7 +43,7 @@
 
     <div id="projects" class="projects">
         <h1>My projects</h1>
-        <!-- <h2>Explore some of my projects</h2> -->
+        <h2>Explore</h2>
         <div class="project-content">
             <div class="project-images">
                 <a href="https://omari25.github.io/Moringa-Website/"><img src="./assets/images/Screenshot from 2022-06-15 05-54-36.png" alt="">
@@ -66,38 +66,36 @@
         </div>
     </div>
 
-    <center>
-        <div id="services" class="services">
-            <h1>My services</h2>
-            <h2>what i provide</h2>
-            <div class="serv-content">
-                <div class="boxes">
-                    <i class="fas fa-paint-brush"></i>
-                    <h3>Web Design</h3>
-                    <p>I make Beautiful ideas come to life and impliment them according to client satisfaction.</p>
-                </div>
-                <div class="boxes">
-                    <i class="fas fa-chart-line"></i>
-                    <h3>UI design</h3>
-                    <p>I ensure that the website is visually appealing as possible and easy to navigate.</p>
-                </div>
-                <div class="boxes">
-                    <i class="fas fa-code"></i>
-                    <h3>Team Player</h3>
-                    <p>Working solo just isn't fun enough. I prefer being part of a wolfpack and help the team to achieve the end goal</p>
-                </div>
+    <div id="services" class="services">
+        <h1>My services</h2>
+        <h2>what i provide</h2>
+        <div class="serv-content">
+            <div class="boxes">
+                <i class="fas fa-paint-brush"></i>
+                <h3>Web Design</h3>
+                <p>I make Beautiful ideas come to life and impliment them according to client satisfaction.</p>
+            </div>
+            <div class="boxes">
+                <i class="fas fa-chart-line"></i>
+                <h3>UI design</h3>
+                <p>I ensure that the website is visually appealing as possible and easy to navigate.</p>
+            </div>
+            <div class="boxes">
+                <i class="fas fa-code"></i>
+                <h3>Team Player</h3>
+                <p>Working solo just isn't fun enough. I prefer being part of a wolfpack and help the team to achieve the end goal</p>
             </div>
         </div>
-    </center>
+    </div>
 
     <div id="about" class="about">
-        <h1>About me</h1>
-        <h2>who am i</h2>
+        <div class="left-about">
+            <img src="./assets/images/programmer.jpg" alt="">
+        </div>
         <div class="about-content">
-            <div class="left-about">
-                <img src="./assets/images/myImage.jpg" alt="">
-            </div>
             <div class="right-about">
+                <h1>About me</h1>
+                <h2>who am i</h2>
                 <p> I am a highly motivated and passionate full-stack web developer, 
                     seeking opportunity to help and inspire companies through passion. I have good communication skills with 
                     the ability to convey ideas clearly with an emphasis on client satisfaction 
@@ -109,7 +107,7 @@
     </div>
 
     <footer>
-        <!-- <p>Created by <span>Omar</span> | <i class="fa-regular fa-copyright"></i>2022 All Rights Reserved</p> -->
+        <p>Created by <span>Omar</span> | <i class="fa-regular fa-copyright"></i>2022 All Rights Reserved</p>
     </footer>
     
     <script src="./assets/js/script.js"></script>
