style and modify the website

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <p class="major">Software developer</p>
                 </div>
                 <div class="my-name2">
-                    <p class="assessment">A highly motivated and passionate full-stack web developer and always genuinely interested in bettering myself and my approaches to software development.</p>
+                    <p class="assessment">A highly motivated and passionate full-stack web developer who is always genuinely interested in bettering myself and my approaches to software development.</p>
                 </div>
                 <a href="#contact"><button class="hire-me">Contact Me</button></a>
             </div>
@@ -90,7 +90,7 @@
 
     <div id="about" class="about">
         <div class="left-about">
-            <img src="./assets/images/programmer.jpg" alt="">
+            <img src="./assets/images/karl-pawlowicz-QUHuwyNgSA0-unsplash.jpg" alt="">
         </div>
         <div class="about-content">
             <div class="right-about">
