add some features

--- a/index.html
+++ b/index.html
@@ -43,25 +43,45 @@
 
     <div id="projects" class="projects">
         <h1>My projects</h1>
-        <h2>Explore</h2>
+        <h2>explore</h2>
         <div class="project-content">
             <div class="project-images">
-                <a href="https://omari25.github.io/Moringa-Website/"><img src="./assets/images/Screenshot from 2022-06-15 05-54-36.png" alt="">
-                <p>A school landing page</p></a>
+                <a href="https://omari25.github.io/Cinema-Site/">
+                    <div class="image-only">
+                        <img src="./assets/images/Screenshot from 2022-07-10 14-41-39.png" alt="">
+                    </div>
+                    <h3>Cinema Site</h3> 
+                    <p>This is a website where you can browse and search all the of latest and most popular movies across the world.</p>
+                </a>
             </div>
             <div class="project-images">
-                <a href="https://omari25.github.io/Moringa-School-second-assignment/"><img src="./assets/images/Screenshot from 2022-06-15 05-55-26.png" alt="">
-                <p>Quick movers website</p></a>
+                <a href="https://omari25.github.io/Javascript-practice-course/">
+                    <div class="image-only">
+                        <img src="./assets/images/Screenshot from 2022-07-10 14-40-39.png" alt="">
+                    </div>
+                    <h3>Javascript Practise Quizzes</h3> 
+                    <p>This website is about some basic Javascript questions</p>
+                </a>
             </div>
         </div>
         <div class="project-content">
             <div class="project-images">
-                <a href="https://omari25.github.io/Javascript-practice-course/"><img src="./assets/images/Screenshot from 2022-06-15 05-55-54.png" alt="">
-                <p>Javscript practice quizzes</p></a>
+                <a href="https://omari25.github.io/Moringa-School-second-assignment/">
+                    <div class="image-only">
+                        <img src="./assets/images/Screenshot from 2022-07-10 14-37-45.png" alt="">
+                    </div>
+                    <h3>Quick Movers</h3> 
+                    <p>A website is about modern housing and easy way to relocate.</p>
+                </a>
             </div>
             <div class="project-images">
-                <a href="https://omari25.github.io/Javascript-practice-course/"><img src="./assets/images/Screenshot from 2022-06-15 05-55-54.png" alt="">
-                <p>Javscript practice quizzes</p></a>
+                <a href="https://omari25.github.io/Moringa-Website/">
+                    <div class="image-only">
+                        <img src="./assets/images/Screenshot from 2022-07-10 14-27-21.png" alt="">
+                    </div>
+                    <h3>School landing page</h3> 
+                    <p>This website is about Moringa school landing page.</p>
+                </a>
             </div>
         </div>
     </div>
