--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Omar Mahat</title>
+    <title>Portfolio Website</title>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito&family=Oxygen&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/26f32fba18.js" crossorigin="anonymous"></script>
