--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </a>
             </div>
             <div class="project-images">
-                <a href="https://omari25.github.io/Javascript-practice-course/">
+                <a href="https://omari25.github.io/Javascript-practice-quizzes/">
                     <div class="image-only">
                         <img src="./assets/images/Screenshot from 2022-07-10 14-40-39.png" alt="">
                     </div>
@@ -66,7 +66,7 @@
         </div>
         <div class="project-content">
             <div class="project-images">
-                <a href="https://omari25.github.io/Moringa-School-second-assignment/">
+                <a href="https://omari25.github.io/Quick-Movers/">
                     <div class="image-only">
                         <img src="./assets/images/Screenshot from 2022-07-10 14-37-45.png" alt="">
                     </div>
@@ -75,7 +75,7 @@
                 </a>
             </div>
             <div class="project-images">
-                <a href="https://omari25.github.io/Moringa-Website/">
+                <a href="https://omari25.github.io/School-Landing-Page/">
                     <div class="image-only">
                         <img src="./assets/images/Screenshot from 2022-07-10 14-27-21.png" alt="">
                     </div>
@@ -87,7 +87,7 @@
     </div>
 
     <div id="services" class="services">
-        <h1>My services</h2>
+        <h1>My services</h1>
         <h2>what i provide</h2>
         <div class="serv-content">
             <div class="boxes">
@@ -124,6 +124,10 @@
                 </p>
             </div>
         </div>
+    </div>
+
+    <div id="contact" class="contact">
+        <h1>Contact Info</h1>
     </div>
 
     <footer>
